# supacode-linux

./: Makefile  README.md
.github/workflows/: linux.yml
Configurations/: Project.xcconfig
SupacodeSettingsShared/App/: AppShortcuts.swift
SupacodeSettingsShared/Domain/: OpenWorktreeAction.swift
linux/: ARCHITECTURE.md  FEATURE_PARITY.md  README.md  package.json
linux/packaging/: README.md
linux/packaging/appimage/: AppRun  agent-workbench.desktop  supacode-linux.desktop  supacode.desktop
linux/packaging/arch/: PKGBUILD
linux/packaging/debian/: control  install  rules
linux/qt/: CMakeLists.txt
linux/qt/resources/: supacode.qrc
linux/qt/src/: main.cpp
linux/scripts/: build-deb.sh  build-qt.sh  check-packaging.sh  check-qt-ui.sh  check-ui.sh  verify.sh
linux/src/: agent-integrations.mjs  github-status.mjs  remote-git.mjs  supacode-linux.mjs  terminal-launch.mjs  utils.mjs
linux/src/app/: agent-workbench.gjs
linux/state/: README.md
linux/state/migrations/: 0001_initial.sql  0002_agent_events.sql  0003_terminal_launch_state.sql  0004_github_pull_requests.sql  0005_terminal_launch_plan.sql  0006_parity_contracts.sql
linux/test/: cli.test.mjs
supacode/App/: ContentView.swift
supacode/Features/Repositories/BusinessLogic/: SidebarStructure.swift
supacode/Features/Repositories/Reducer/: RepositoriesFeature.swift
supacodeTests/: OpenWorktreeActionTests.swift  RepositoriesFeatureTests.swift
